--- a/_config.yml
+++ b/_config.yml
@@ -41,9 +41,9 @@ nav:
   Categories:
     - '/'
     # - { Categories All: '/blog/categories/' }
-    - { til: '/blog/categories/#til' }
-    - { swift: '/blog/categories/#swift' }
-    - { ios: '/blog/categories/#ios' }
+    - { TIL: '/blog/categories/#til' }
+    - { Swift: '/blog/categories/#swift' }
+    - { iOS: '/blog/categories/#ios' }
   #  - { Algorithm: '/blog/categories/#Algorithm' }
     - { git: '/blog/categories/#git' }
   #  - { CS : '/blog/categories/#CS' }
