--- a/_config.yml
+++ b/_config.yml
@@ -27,12 +27,11 @@ author:
   name: odong-Tree
   description: 오동나무(odong-Tree)
   contact:
-    # linkedin:  https://www.linkedin.com/in/lizhihao
+    # linkedin:  https://www.linkedin.com/
     github:    https://github.com/odong-Tree
-    # facebook:  https://www.facebook.com/zbtvoa65
-    # twitter:   https://twitter.com/Li_Zhihao
-    # weibo:     http://weibo.com/41173780
-    # email:    mailto:zbtvoa.01@gmail.com
+    # facebook:  https://www.facebook.com/
+    # twitter:   https://twitter.com/
+    # email:
 
 # Navigation (2nd level links supported)
 nav:
@@ -44,13 +43,14 @@ nav:
     - { TIL: '/blog/categories/#til' }
     - { Swift: '/blog/categories/#swift' }
     - { iOS: '/blog/categories/#ios' }
-  #  - { Algorithm: '/blog/categories/#Algorithm' }
     - { git: '/blog/categories/#git' }
-  #  - { CS : '/blog/categories/#CS' }
-    - { 자료구조: '/blog/categories/#자료구조' }
-    - { 알고리즘: '/blog/categories/#알고리즘' }
+    - { DataStructure: '/blog/categories/#DataStructure' }
+    - { Algorithm: '/blog/categories/#Algorithm' }
+    - { CS : '/blog/categories/#CS' }
+    - { Writing: '/blog/categories/#Writing' }
     - { etc: '/blog/categories/#etc' }
-    # - { Tags: '/blog/tags/' }
+  Tags:
+    - '/blog/tags/'
   About:
     - '/about/'
   # Search:
