--- a/_config.yml
+++ b/_config.yml
@@ -44,8 +44,8 @@ nav:
     - { Swift: '/blog/categories/#swift' }
     - { iOS: '/blog/categories/#ios' }
     - { git: '/blog/categories/#git' }
-    - { DataStructure: '/blog/categories/#DataStructure' }
-    - { Algorithm: '/blog/categories/#Algorithm' }
+    - { 자료구조: '/blog/categories/#자료구조' }
+    - { 알고리즘: '/blog/categories/#알고리즘' }
     - { CS : '/blog/categories/#CS' }
     - { Writing: '/blog/categories/#Writing' }
     - { etc: '/blog/categories/#etc' }
