--- a/_config.yml
+++ b/_config.yml
@@ -63,6 +63,6 @@ category_page: '/blog/categories/'
 
 # Puglins
 mathjax: true # whether support mathjax
-google_analytics: 'G-TK1W5ZFQBY' # leave blank if you don't want google analytics
+google_analytics_token: 'G-TK1W5ZFQBY' # leave blank if you don't want google analytics
 disqus_short_name: 'odong-Tree' # leave blank if you don't want disqus
 
